logs/rsl.rest.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rsl'...
Listing './lib/python3.5/site-packages/rsl/misc'...
Compiling './lib/python3.5/site-packages/rsl/misc/isodate.py'...
***   File "./lib/python3.5/site-packages/rsl/misc/isodate.py", line 121
    raise ValueError, 'invalid date string format'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rsl/rest'...
Compiling './lib/python3.5/site-packages/rsl/rest/rest.py'...
***   File "./lib/python3.5/site-packages/rsl/rest/rest.py", line 148
    print headers['content-type']
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rsl/transport'...
Compiling './lib/python3.5/site-packages/rsl/transport/urllib2transport.py'...
***   File "./lib/python3.5/site-packages/rsl/transport/urllib2transport.py", line 70
    except HTTPError, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rsl-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/rsl.rest-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
